<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholder"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/cpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cpf_placeholder"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_placeholder"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/startdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/startdate_placeholder"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/enddate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enddate_placeholder"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/rent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/rent_placeholder"
            android:inputType="text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/paymentday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/paymentday_placeholder"
            android:inputType="text"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/date_placeholder"
            android:inputType="text"
            android:textSize="13sp" />

        <Button
            android:layout_width="150dp"
            android:id="@+id/generatebtn"
            android:text="@string/generate_button"
            android:layout_height="80dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>